--- a/source/latex/publication.tex
+++ b/source/latex/publication.tex
@@ -4,7 +4,7 @@ International
 \resumePublicationListStart
     \publicationItem{Jinsoo Choi, \textbf{Jaesik Park}, and In So Kweon}{Self-Supervised Real-time Video Stabilization}{The British Machine Vision Conference (\textbf{BMVC}), 2021}{}
     \publicationItem{Jungeon Kim, Hyomin Kim, Hyeonseo Nam, \textbf{Jaesik Park}, and Seungyong Lee}{TextureMe: High-quality Textured Scene Reconstruction in Real-time}{ACM Transactions on Graphics (\textbf{ToG}), 2021}{}
-    \publicationItem{Minguk Kang, Woohyeon Joseph Shim, Minsu Cho, and \textbf{Jaesik Park}}{Rebooting ACGAN: Auxiliary Classifier GANs with Stable Training}{Conference on Neural Information Processing Systems (\textbf{NeurIPS}), 2021}{}
+    \publicationItem{Minguk Kang, Woohyeon Shim, Minsu Cho, and \textbf{Jaesik Park}}{Rebooting ACGAN: Auxiliary Classifier GANs with Stable Training}{Conference on Neural Information Processing Systems (\textbf{NeurIPS}), 2021}{}
     \publicationItem{Hyunsoo Chung, Jungtaek Kim, Boris Knyazev, Jinhwi Lee, Graham W. Taylor, \textbf{Jaesik Park}, and Minsu Cho}{Brick-by-Brick: Combinatorial Construction with Deep Reinforcement Learning}{Conference on Neural Information Processing Systems (\textbf{NeurIPS}), 2021}{}
     \publicationItem{Yoonwoo Jeong, Seokjun Ahn, Christopher Choy, Animashree Anandkumar, Minsu Cho, and \textbf{Jaesik Park}}{Self-Calibrating Neural Radiance Fields}{International Conference on Computer Vision (\textbf{ICCV}), 2021}{}
     \publicationItem{Junha Lee, Seungwook Kim, Minsu Cho, and \textbf{Jaesik Park}}{Deep Hough Voting for Robust Global Registration}{International Conference on Computer Vision (\textbf{ICCV}), 2021}{}
