--- a/cv.tex
+++ b/cv.tex
@@ -130,8 +130,8 @@
           \resumeItem{Selected as one of the \textbf{POSTECH's Representative Research Achievements} (2021)}
           \resumeItem{Received \textbf{Outstanding Online Class award} (2020) and \textbf{the Best EduTech award} (2021)}
           \resumeItem{3D scene reconstruction, understanding, and assembly projects}
-          \resumeItem{Proposed novel image generation pipelines: \textbf{StudioGAN} projects receives 1.9k GitHub stars}
-          \resumeItem{3.8k Google Scholar citations (as of Oct. 2021)}
+          \resumeItem{Proposed novel image generation pipelines: \textbf{StudioGAN} project receives 1.9k GitHub stars}
+          \resumeItem{3.9k Google Scholar citations (as of Nov. 2021)}
         \resumeItemListEnd
     \resumeSubheading
       {Staff Research Scientist}{Santa Clara, CA, USA}
