--- a/cv.tex
+++ b/cv.tex
@@ -178,7 +178,7 @@ International
     \publicationItem{Junha Lee, Christopher Choy, and \textbf{Jaesik Park}}{Putting 3D Spatially Sparse Networks on a Diet}{2112.01316 (arXiv), 2021}{}
     \publicationItem{Jaesung Choe*, Chunghyun Park*, Francois Rameau, \textbf{Jaesik Park}, and In So Kweon}{PointMixer: MLP-Mixer for Point Cloud Understanding}{2111.11187 (arXiv), 2021}{(*Equal contribution)}
     \publicationItem{Jaesung Choe, Byeongin Joung, Francois Rameau, \textbf{Jaesik Park}, and In So Kweon}{Deep Point Cloud Reconstruction}{2111.11704 (arXiv), 2021}{}
-    \publicationItem{Wei Dong*, Kwonyoung Ryu*, Michael Kaess, and \textbf{Jaesik Park}}{Real-time Registration and Reconstruction with Cylindrical LiDAR Images}{2112.02779 (arXiv), 2021}{}
+    \publicationItem{Wei Dong*, Kwonyoung Ryu*, Michael Kaess, and \textbf{Jaesik Park}}{Real-time Registration and Reconstruction with Cylindrical LiDAR Images}{2112.02779 (arXiv), 2021}{(*Equal contribution)}
     \publicationItem{Jinsoo Choi, \textbf{Jaesik Park}, and In So Kweon}{Self-Supervised Real-time Video Stabilization}{British Machine Vision Conference (\textbf{BMVC}), 2021}{}
     \publicationItem{Jungeon Kim, Hyomin Kim, Hyeonseo Nam, \textbf{Jaesik Park}, and Seungyong Lee}{TextureMe: High-quality Textured Scene Reconstruction in Real-time}{ACM Transactions on Graphics (\textbf{ToG}), 2021}{}
     \publicationItem{Minguk Kang, Woohyeon Shim, Minsu Cho, and \textbf{Jaesik Park}}{Rebooting ACGAN: Auxiliary Classifier GANs with Stable Training}{Conference on Neural Information Processing Systems (\textbf{NeurIPS}), 2021}{}
